Initial commit for dns-ping service generation

--- a/openshift-maven-plugin/plugin/src/main/resources/META-INF/jkube/profiles-default.yml
+++ b/openshift-maven-plugin/plugin/src/main/resources/META-INF/jkube/profiles-default.yml
@@ -63,6 +63,8 @@
     - jkube-healthcheck-micronaut
     - jkube-prometheus
 
+    - jkube-dns-ping-wildfly-jar
+
     # Value merge enrichers
     - jkube-container-env-java-options
 
