--- a/kubernetes-maven-plugin/plugin/src/main/resources/META-INF/jkube/profiles-default.yml
+++ b/kubernetes-maven-plugin/plugin/src/main/resources/META-INF/jkube/profiles-default.yml
@@ -66,6 +66,8 @@
     - jkube-healthcheck-micronaut
     - jkube-prometheus
 
+    - jkube-dns-ping-wildfly-jar
+
     # Value merge enrichers
     - jkube-container-env-java-options
 
